[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[project]
name = "orrery-heartbeat"
version = "0.1.0"
description = "Lightweight update-check for orrery CLI tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eridanus" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
orrery-upgrade = "orrery_heartbeat.cli:run"
orrery-env = "orrery_heartbeat.env:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]
