[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[project]
name = "orrery-heartbeat"
version = "0.3.0"
description = "Verified release installer for Orrery CLI tools"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eridanus" }]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = ["certifi>=2025.1.31"]

[project.scripts]
orrery-upgrade = "orrery_heartbeat.cli:run"
orrery-env = "orrery_heartbeat.env:run"

[dependency-groups]
dev = [
    "poethepoet",
    "pytest>=8.0",
    "ruff>=0.15",
]
freeze = ["pyinstaller>=6,<7"]

[tool.poe.tasks]
freeze = { cmd = "./scripts/build-release.sh", help = "build release binaries" }
